{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 18,
  "lineage": "eb178dc4-3493-9573-5859-e2d017b2c5df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd04917a2be2102f",
            "domain": "vpc",
            "id": "eipalloc-0dd04917a2be2102f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-167-58.compute-1.amazonaws.com",
            "public_ip": "34.225.167.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_eip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086d96aca4c98ba54",
            "domain": "vpc",
            "id": "eipalloc-086d96aca4c98ba54",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-201-143-222.compute-1.amazonaws.com",
            "public_ip": "52.201.143.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:internet-gateway/igw-07dc2a93da2bf3fcd",
            "id": "igw-07dc2a93da2bf3fcd",
            "owner_id": "112414044347",
            "tags": {
              "Name": "dev_gw"
            },
            "tags_all": {
              "Name": "dev_gw"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd04917a2be2102f",
            "connectivity_type": "public",
            "id": "nat-0654c1b9606b74463",
            "network_interface_id": "eni-0ad3f79b33637283b",
            "private_ip": "10.0.1.34",
            "public_ip": "34.225.167.58",
            "subnet_id": "subnet-008caa10484792b9d",
            "tags": {
              "Name": "dev_nat"
            },
            "tags_all": {
              "Name": "dev_nat"
            }
          },
          "dependencies": [
            "aws_eip.dev_eip-1",
            "aws_internet_gateway.dev_gw",
            "aws_subnet.pub_subnet-1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086d96aca4c98ba54",
            "connectivity_type": "public",
            "id": "nat-05ac3dbdf4a162ee1",
            "network_interface_id": "eni-06dbd338b121c2fd5",
            "private_ip": "10.0.2.16",
            "public_ip": "52.201.143.222",
            "subnet_id": "subnet-0ffe87cc94f90b80b",
            "tags": {
              "Name": "test_nat"
            },
            "tags_all": {
              "Name": "test_nat"
            }
          },
          "dependencies": [
            "aws_eip.test_eip-2",
            "aws_internet_gateway.dev_gw",
            "aws_subnet.pub_subnet-2",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:route-table/rtb-0cf76e416e5baa3e3",
            "id": "rtb-0cf76e416e5baa3e3",
            "owner_id": "112414044347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dc2a93da2bf3fcd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privat_route_table"
            },
            "tags_all": {
              "Name": "privat_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:route-table/rtb-0e0a7d4d200f62088",
            "id": "rtb-0e0a7d4d200f62088",
            "owner_id": "112414044347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07dc2a93da2bf3fcd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040666573792c395c",
            "route_table_id": "rtb-0cf76e416e5baa3e3",
            "subnet_id": "subnet-047c4b6efeae3c592"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.pri_subnet-1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068bef6bb1fa48d40",
            "route_table_id": "rtb-0cf76e416e5baa3e3",
            "subnet_id": "subnet-06ae5347e87dd1073"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.pri_subnet-2",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046d635f1d2c8ff99",
            "route_table_id": "rtb-0e0a7d4d200f62088",
            "subnet_id": "subnet-008caa10484792b9d"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet-1",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a5fb013c318ad4a",
            "route_table_id": "rtb-0e0a7d4d200f62088",
            "subnet_id": "subnet-0ffe87cc94f90b80b"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet-2",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-047c4b6efeae3c592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047c4b6efeae3c592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App-1a"
            },
            "tags_all": {
              "Name": "App-1a"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-06ae5347e87dd1073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ae5347e87dd1073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App-1b"
            },
            "tags_all": {
              "Name": "App-1b"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-04bf0bb57166b453d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bf0bb57166b453d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-0e3d7db7a522b8718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3d7db7a522b8718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-1b"
            },
            "tags_all": {
              "Name": "Database-1b"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-008caa10484792b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008caa10484792b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-1a"
            },
            "tags_all": {
              "Name": "Web-1a"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:subnet/subnet-0ffe87cc94f90b80b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffe87cc94f90b80b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "112414044347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-1b"
            },
            "tags_all": {
              "Name": "Web-1b"
            },
            "vpc_id": "vpc-06c1b4f54d2687554"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112414044347:vpc/vpc-06c1b4f54d2687554",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c77419118ad77a9",
            "default_route_table_id": "rtb-03f2edd54306e7430",
            "default_security_group_id": "sg-0c62ae9e7c6d7b7fd",
            "dhcp_options_id": "dopt-1025166a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06c1b4f54d2687554",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f2edd54306e7430",
            "owner_id": "112414044347",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}